# seiscomp-programming-templates

./: CMakeLists.txt  README.md
scevent-score/: CMakeLists.txt  README.md  plugin.cpp
scevent-score/descriptions/: scevent_score_template.xml
