SC_BEGIN_PACKAGE(SCEVENT_SCORE_TEMPLATE)

SET(SEISCOMP_BASE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/common)
SET(SEISCOMP_BASE_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/common)
SET(SEISCOMP_MAIN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/base/main)
SET(SEISCOMP_MAIN_BINARY_DIR ${CMAKE_BINARY_DIR}/src/base/main)

SET(
	SCORE_SOURCES
		plugin.cpp
)

INCLUDE_DIRECTORIES(${SEISCOMP_BASE_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${SEISCOMP_BASE_BINARY_DIR}/libs)
INCLUDE_DIRECTORIES(${SEISCOMP_MAIN_SOURCE_DIR}/apps/processing/scevent)
INCLUDE_DIRECTORIES(${SEISCOMP_MAIN_BINARY_DIR}/apps/processing/scevent)

SC_ADD_PLUGIN_LIBRARY(SCORE tmplevscore scevent)
SC_LINK_LIBRARIES_INTERNAL(tmplevscore core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
